# llama-stack

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_PROCESS.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: discussion.yml
.github/workflows/: README.md  backward-compat.yml  build-distributions.yml  changelog.yml  codeql.yml  conformance.yml  install-script-ci.yml  integration-auth-tests.yml  integration-sql-store-tests.yml  integration-tests.yml  integration-vector-io-tests.yml  pre-commit.yml  providers-build.yml  providers-list-deps.yml  python-build-test.yml  record-integration-tests.yml  stainless-builds.yml  stale_bot.yml  test-external-provider-module.yml  test-external.yml  ui-unit-tests.yml  unit-tests.yml
containers/: Containerfile
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  quick_start.ipynb  sidebars.ts
docs/docs/: api-overview.md
scripts/: cleanup_recordings.py  docker.sh  gen-ci-docs.py  generate_ci_matrix.py  generate_prompt_format.py  get_setup_env.py  install.sh  integration-tests.sh  provider_codegen.py  run-ui-linter.sh  run_openapi_generator.sh
src/llama_stack_api/: README.md  __init__.py  agents.py  benchmarks.py  connectors.py  conversations.py  datasets.py  datatypes.py  files.py  inference.py  inspect.py  inspect_api.py  models.py  openai_responses.py  post_training.py  prompts.py  providers.py  pyproject.toml  rag_tool.py  resource.py  router_utils.py  safety.py  schema_utils.py  scoring.py  scoring_functions.py  shields.py  tools.py  vector_io.py
src/llama_stack_api/admin/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/batches/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/benchmarks/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/common/: content_types.py  job_types.py  responses.py
src/llama_stack_api/conversations/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/datasetio/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/datasets/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/eval/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/file_processors/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/files/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/inspect_api/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/internal/: __init__.py  kvstore.py  sqlstore.py
src/llama_stack_api/models/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/post_training/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/providers/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/shields/: __init__.py  api.py  fastapi_routes.py  models.py
tests/: README.md
(+760 files in other folders)
